# mlflow_study

./: .gitignore  README.md  example.env  pyproject.toml
mlflow_study/: mlflow_config.py  predict.py  train.py
mlflow_study/mlruns/1/756a4346af0245fbb25501d2691ffc4e/artifacts/: estimator.html
mlflow_study/mlruns/1/models/m-3c9defd9b54049439ac0ae224cf9892d/artifacts/: MLmodel  model.pkl
mlflow_study/mlruns/1/models/m-a4850a3422f744c99005516ccef4f7ea/artifacts/: MLmodel
